--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ html{
     display: block;
 }
 
-.submenu, .sub-submenu {
+.submenu {
     list-style: none;
     width: 200px;
     position: absolute;
@@ -132,9 +132,25 @@ html{
     padding: 5px;
     background: rgba(255, 255, 255, 0.2);
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+}
+
+.sub-submenu {
+    list-style: none;
+    width: 200px;
+    position: absolute;
+    padding: 0;
+    margin: 0;
+    display: none;
+    padding: 5px;
+    background: rgba(255, 255, 255, 0.2);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+}
+
+.sub-submenu {
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px); 
-    border-radius: 15px;
 }
 
 .submenu-item {
